--- a/templates/about.html
+++ b/templates/about.html
@@ -3,19 +3,10 @@
 {% block content %}
 
 <div class="container">
-    <h1>เกี่ยวกับเว็บแอปพลิเคชันแปลภาษามือไทย</h1>
-    <div class="howto">
-        <h3>วิธีการใช้งาน</h3>
-        <ol class="list-howto">
-            <li>ตั้งกล้องของคุณให้ตรงโดยให้เห็นสัดส่วนของใบหน้า ลำตัว แขน และมืออย่างชัดเจน</li>
-            <li>ทำท่าทางภาษามือที่คุณต้องการแปลอย่างช้า ๆ เนื่องจากระบบอาจจะประมวลผลได้ไม่แม่นยำ</li>
-            <li>รอระบบประมวลผลประมาณ 6 วินาที เพื่อแสดงผลลัพธ์</li>
-            <li>ผลลัพธ์ที่ได้จะแสดงเป็นข้อความ</li>
-        </ol>
-    </div>
-
+    <h1>เกี่ยวกับระบบแปลภาษามือไทย</h1>
+  
     <div class="creator">
-        <h3>ผู้จัดทำเว็บแอปพลิเคชัน</h3>
+        <h3>ผู้จัดทำระบบ</h3>
 
         <!-- creator 1 -->
         <div class="card mb-3" style="max-width: 768px;">
