--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,28 @@
-{% extends "layout.html" %} 
+{% extends "layout.html" %}
 
 {% block content %}
 
 <div class="container">
-  <h1>เว็บแอปพลิเคชันแปลภาษามือไทย</h1>
+  <h1>ระบบแปลภาษามือไทย</h1>
+  <p class="des">ระบบแปลภาษามือไทยนี้พัฒนาขึ้นสำหรับบุคคลทั่วไปที่ต้องการเรียนรู้และเข้าใจในภาษามือไทย โดยระบบนี้สามารถแปลภาษามือไทยได้เฉพาะหมวดหมู่คำทักทาย 30 ประโยคเท่านั้น ซึ่งสามารถศึกษาประโยคภาษามือ  
+    <a href="https://www.canva.com/design/DAFeVbMpfNY/8ly_WhqCqGpIXHuX0u5fPg/view?utm_content=DAFeVbMpfNY&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" style="text-decoration: none;">"ได้ที่นี่"</a> 
+  </p>
   <div class="camera">
     <img src="{{ url_for('video_feed') }}">
+  </div>
+</div>
+
+<div class="boder">
+  <div class="c-how">
+    <div class="howto">
+      <h3>วิธีการใช้งาน</h3>
+      <ol class="list-howto">
+        <li>ตั้งกล้องของคุณให้ตรงโดยให้เห็นสัดส่วนของใบหน้า ลำตัว แขน และมืออย่างชัดเจน</li>
+        <li>ทำท่าทางภาษามือที่คุณต้องการแปลอย่างช้า ๆ เนื่องจากระบบอาจจะประมวลผลได้ไม่แม่นยำ</li>
+        <li>รอระบบประมวลผลประมาณ 6 วินาที หรือมากกว่านั้น เพื่อแสดงผลลัพธ์</li>
+        <li>ผลลัพธ์ที่ได้จะแสดงเป็นข้อความ</li>
+      </ol>
+    </div>
   </div>
 </div>
 
