--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
         <h3>ผู้จัดทำระบบ</h3>
 
         <!-- creator 1 -->
-        <div class="card mb-3" style="max-width: 768px;">
+        <div class="card mb-3 name-creator">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="../static/creator1.jpg" class="img-fluid rounded-start" alt="creator 1">
@@ -27,7 +27,7 @@
         </div>
 
         <!-- creator 2 -->
-        <div class="card mb-3" style="max-width: 768px;">
+        <div class="card mb-3 name-creator">
             <div class="row g-0">
             <div class="col-md-4">
                 <img src="../static/creator2.jpg" class="img-fluid rounded-start" alt="creator 2">
