Update index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,20 +10,23 @@
   <div class="camera">
     <img src="{{ url_for('video_feed') }}">
   </div>
-</div>
 
-<div class="boder">
-  <div class="c-how">
-    <div class="howto">
-      <h3>วิธีการใช้งาน</h3>
-      <ol class="list-howto">
-        <li>ตั้งกล้องของคุณให้ตรงโดยให้เห็นสัดส่วนของใบหน้า ลำตัว แขน และมืออย่างชัดเจน</li>
-        <li>ทำท่าทางภาษามือที่คุณต้องการแปลอย่างช้า ๆ เนื่องจากระบบอาจจะประมวลผลได้ไม่แม่นยำ</li>
-        <li>รอระบบประมวลผลประมาณ 6 วินาที หรือมากกว่านั้น เพื่อแสดงผลลัพธ์</li>
-        <li>ผลลัพธ์ที่ได้จะแสดงเป็นข้อความ</li>
-      </ol>
+  <p class="note">หมายเหตุ: หากคุณไม่ได้ทำท่าทางหรืออยู่นิ่ง ๆ ระบบจะประมวลผลแสดงข้อความออกมาเป็นคำว่า wait</p>
+
+  <div class="boder">
+    <div class="c-how">
+      <div class="howto">
+        <h3>วิธีการใช้งาน</h3>
+        <ol class="list-howto">
+          <li>ตั้งกล้องของคุณให้ตรงโดยให้เห็นสัดส่วนของใบหน้า ลำตัว แขน และมืออย่างชัดเจน</li>
+          <li>ทำท่าทางภาษามือที่คุณต้องการแปลอย่างช้า ๆ เนื่องจากระบบอาจจะประมวลผลได้ไม่แม่นยำ</li>
+          <li>รอระบบประมวลผลประมาณ 6 วินาที หรือมากกว่านั้น เพื่อแสดงผลลัพธ์</li>
+          <li>ผลลัพธ์ที่ได้จะแสดงออกมาเป็นข้อความในแถบสีน้ำเงินด้านบน</li>
+        </ol>
+      </div>
     </div>
   </div>
+
 </div>
 
 {% endblock %}
