--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,24 +1,24 @@
 body {
-    font-family: 'Bai Jamjuree', sans-serif;
-    color: black;
+  font-family: "Bai Jamjuree", sans-serif;
+  color: black;
 }
 
 .navbar-brand {
-    margin: 0 20px;
+  margin: 0 20px;
 }
 
 .container {
-    margin-top: 40px !important;
+  margin-top: 40px !important;
 }
 
 h1 {
-    text-align: center;
-    margin-bottom: 24px;
-    font-weight: bold;
+  text-align: center;
+  margin-bottom: 24px;
+  font-weight: bold;
 }
 
 .camera img {
-    width: 60%;
+  width: 60%;
 }
 
 /* .img-fluid {
@@ -26,8 +26,8 @@ h1 {
 } */
 
 .camera {
-    text-align: center;
-    margin-bottom: 40px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 /* .camera img {
@@ -35,60 +35,67 @@ h1 {
 } */
 
 .justify-content-center {
-    justify-content: right !important;
+  justify-content: right !important;
 }
 
 a.nav-link {
-    margin: 0 16px;
+  margin: 0 16px;
 }
 
 .list-howto {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 h3 {
-    font-weight: bold;
-    margin-bottom: 16px;
-    /* text-align: center; */
+  font-weight: bold;
+  margin-bottom: 16px;
+  /* text-align: center; */
 }
 
 .creator .card-text {
-    margin: 4px 0;
-    font-size: 18px;
+  margin: 4px 0;
+  font-size: 18px;
 }
 
 .creator h5.card-title {
-    margin-bottom: 24px;
-    font-weight: bold;
+  margin-bottom: 24px;
+  font-weight: bold;
 }
 
 .card-body {
-    padding: 40px;
+  padding: 40px;
 }
 
 .creator .row {
-    align-items: center;
+  align-items: center;
 }
 
-.creator .name-creator{
-    max-width: 768px;
-    margin-left: auto;
-    margin-right: auto;
-
+.creator .name-creator {
+  max-width: 768px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 .howto {
-    margin:24px;
+  margin: 24px;
 }
-.c-how{
-    border: solid 1px black;
-    border-radius: 10px;
-    max-width: max-content;
+
+.c-how {
+  border: solid 1px black;
+  border-radius: 10px;
+  max-width: max-content;
 }
-.boder{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
+
+.boder {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
-.des{
-    font-size: 18px;
+
+.des {
+  font-size: 18px;
+}
+
+.note {
+    text-align: center;
 }
